# HIPAA-Training-System-for-Pharmacy-Staff-V2.0

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  QUICK_START.md  README.md  TESTING.md  app.py  docker-compose.yml  hipaa_training_v2.py  init_db.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  security_middleware.py  setup.bat  setup.py  setup.sh  setup_project.py  test_hipaa_training.py  test_hipaa_training_v2.py  test_hipaa_web.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  ci.yml  python-app.yml  test.yml  tests.yml
content/: checklist_items.json  lessons.json  quiz_questions.json
docs/: API.md  DEPLOYMENT.md  Manual Testing Checklist.txt  QUICK_START.md  TROUBLESHOOTING.md
hipaa_training/: __init__.py  cli.py  content_manager.py  models.py  security.py  training_engine.py
hipaa_training/data/: lessons.json
scripts/: backup_database.sh  fix_flake8.py  health_check.py  setup.py  setup_production.sh
src/: HIPAA Training System V3.0.py  __init__.py  hipaa_ai_pharmacy_production.py  placeholder.txt
src/cli/: data.py  hipaa_training_v2.py
src/core/: config.py
static/css/: style.css
static/js/: app.js
templates/: admin_audit_logs.html  base.html  certificate.html  checklist.html  index.html  lessons.html  login.html  mfa_setup.html  mfa_verify.html  quiz.html
tests/: test_app.py  test_basic.py  test_compliance_dashboard.py  test_content_manager  test_content_manager.py  test_hipaa_training.py  test_hipaa_training_v2.py  test_hipaa_web.py  test_security_manager.py  test_training_engine.py
